--- a/Mini_Projeto.ipynb
+++ b/Mini_Projeto.ipynb
@@ -19,23 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reduzir (nome : str, arq : str, lista_intensidades : list, lista_simetrias : list) -> None:\n",
-    "\n",
     "    '''\n",
     "    Função que gera o arquivo .csv com os novos parâmetros de intensidade e simetria.\n",
+    "\n",
     "    Parâmetros: nome (string) - nome do .csv que será criado;\n",
-    "    arq (string) -  nome do .csv que será recebido para pegar as labels;\n",
-    "    lista_intensidades (list) - lista que contém a intensidade dos pixels de cada dado do dataset;\n",
-    "    lista_simetrias (list) - lista que contém a simetria de cada dado do dataset.\n",
+    "                arq (string) -  nome do .csv que será recebido para pegar as labels;\n",
+    "                lista_intensidades (list) - lista que contém a intensidade dos pixels de cada dado do dataset;\n",
+    "                lista_simetrias (list) - lista que contém a simetria de cada dado do dataset.\n",
     "\n",
     "    Retorno: redux (csv) - um .csv com dimensões reduzidas para diminuir a complexidade dos dados,\n",
-    "    constando apenas com os parâmetros label, intensidade e simetria.  \n",
+    "             constando apenas com os parâmetros label, intensidade e simetria.  \n",
     "    '''\n",
-    "\n",
+    "    \n",
     "    redux = open (f'{nome}.csv', 'w')\n",
     "    aux = open (arq, 'r')\n",
     "\n",
@@ -45,9 +45,16 @@
     "    for linha in aux:\n",
     "        redux.write (f'{linha[0]}, {lista_intensidades[i]}, {lista_simetrias[i]}\\n')\n",
     "        i += 1\n",
-    "\n",
+    "   \n",
     "    redux.close()\n",
-    "    aux.close()"
+    "    aux.close()\n",
+    "\n",
+    "    #inicando a separação entre os dados de treino e teste\n",
+    "    from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "    train, test = train_test_split(redux, train_size=0.8)\n",
+    "    train.to_csv('train.csv', index=False)\n",
+    "    test.to_csv('test.csv', index=False)"
    ]
   },
   {
@@ -57,6 +64,13 @@
    "outputs": [],
    "source": [
     "def intensidade (arq : str) -> list:\n",
+    "    '''\n",
+    "    Função que calcula a intensidade dos pixels de cada dado do dataset a partir de uma equação.\n",
+    "    \n",
+    "    Parâmetros: arq (string) -  nome do .csv que recebe os valores dos pixels das imagens;\n",
+    "\n",
+    "    Retorno: lista_intensidades (lista) - um uma lista com os valores de intensidade.  \n",
+    "    '''\n",
     "    lista_intensidades = []\n",
     "    aux = open (arq, 'r')\n",
     "\n",
@@ -87,15 +101,32 @@
    "outputs": [],
    "source": [
     "def simetria (arq : str) -> list:\n",
+    "    '''\n",
+    "    Função que calcula a simetria dos pixels de cada dado do dataset a partir de uma equação.\n",
+    "    \n",
+    "    Parâmetros: arq (string) -  nome do .csv que recebe os valores dos pixels das imagens;\n",
+    "\n",
+    "    Retorno: lista_intensidades (lista) - um uma lista com os valores de simetria.  \n",
+    "    '''\n",
     "    lista_simetrias = []\n",
+    "    s_vertical = []\n",
+    "    s_horizontal = []\n",
     "    aux = open (arq, 'r')\n",
     "\n",
     "    #Simetria vertical:\n",
     "    for linha in aux:\n",
-    "        for i in range (2, len(linha)):\n",
-    "            continue\n",
+    "        for i in range (2, len(linha)): #pula o label\n",
+    "            #soma valor do pixel da primeia coluna com a ultima\n",
+    "            s_vertical.append((int(linha[i]) + int(linha[i-1]))/255)            \n",
     "\n",
     "    #Simetria horizontal:\n",
+    "    for coluna in aux:\n",
+    "        for i in range (2, len(coluna)): #pula o label\n",
+    "            #soma valor do pixel da primeira linha com a ultima\n",
+    "            s_horizontal.append((int(coluna[i]) + int(coluna[i-28]))/255)\n",
+    "\n",
+    "    #Valor de simetria completa\n",
+    "    lista_simetrias = s_vertical + s_horizontal\n",
     "\n",
     "    aux.close()\n",
     "\n",
