--- a/Mini_Projeto.ipynb
+++ b/Mini_Projeto.ipynb
@@ -19,118 +19,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reduzir (nome : str, arq : str, lista_intensidades : list, lista_simetrias : list) -> None:\n",
-    "    '''\n",
-    "    Função que gera o arquivo .csv com os novos parâmetros de intensidade e simetria.\n",
-    "\n",
-    "    Parâmetros: nome (string) - nome do .csv que será criado;\n",
-    "                arq (string) -  nome do .csv que será recebido para pegar as labels;\n",
-    "                lista_intensidades (list) - lista que contém a intensidade dos pixels de cada dado do dataset;\n",
-    "                lista_simetrias (list) - lista que contém a simetria de cada dado do dataset.\n",
-    "\n",
-    "    Retorno: redux (csv) - um .csv com dimensões reduzidas para diminuir a complexidade dos dados,\n",
-    "             constando apenas com os parâmetros label, intensidade e simetria.  \n",
-    "    '''\n",
-    "    \n",
-    "    redux = open (f'{nome}.csv', 'w')\n",
-    "    aux = open (arq, 'r')\n",
-    "\n",
-    "    redux.write ('label, intensidade, simetria\\n')\n",
-    "\n",
-    "    i = 0\n",
-    "    for linha in aux:\n",
-    "        redux.write (f'{linha[0]}, {lista_intensidades[i]}, {lista_simetrias[i]}\\n')\n",
-    "        i += 1\n",
-    "   \n",
-    "    redux.close()\n",
-    "    aux.close()\n",
-    "\n",
-    "    #inicando a separação entre os dados de treino e teste\n",
-    "    from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "    train, test = train_test_split(redux, train_size=0.8)\n",
-    "    train.to_csv('train.csv', index=False)\n",
-    "    test.to_csv('test.csv', index=False)"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def intensidade (arq : str) -> list:\n",
-    "    '''\n",
-    "    Função que calcula a intensidade dos pixels de cada dado do dataset a partir de uma equação.\n",
+    "N = 28 #Número de linhas e colunas das matrizes das imagens\n",
+    "P_MAX = 255 #Número máximo de um pixel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nAqui é só um exemplo menor de como funcionam as fórmulas da simetria no array.\\nAcho bom usar pra estudar pra apresentação, então deixei aqui.\\n'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Aqui é só um exemplo menor de como funcionam as fórmulas da simetria no array.\n",
+    "Acho bom usar pra estudar pra apresentação, então deixei aqui.\n",
+    "'''\n",
+    "\n",
+    "# teste = [\n",
+    "# 1, 2, 3, 4,\n",
+    "# 5, 6, 7, 8,\n",
+    "# 9, 10, 11, 12,\n",
+    "# 13, 14, 15, 16]\n",
+    "\n",
+    "# lin = 4\n",
+    "\n",
+    "# #Vertical\n",
+    "# print('Vertical')\n",
+    "# for i in range(lin):\n",
+    "\n",
+    "#     for j in range(int(lin/2)):\n",
+    "#         print(f'{teste[(lin*i) + j]} + {teste[(lin*i) + (lin - j - 1)]} = {teste[(lin*i) + j] + teste[(lin*i) + (lin - j - 1)]}')\n",
+    "\n",
+    "# #Horizontal\n",
+    "# print('\\nHorizontal')\n",
+    "# for i in range(int(lin/2)):\n",
     "    \n",
-    "    Parâmetros: arq (string) -  nome do .csv que recebe os valores dos pixels das imagens;\n",
+    "#     for j in range(lin):\n",
+    "#         print(f'{teste[(lin*i) + j]} + {teste[(lin*(lin - i - 1)) + j]} = {teste[(lin*i) + j] + teste[(lin*(lin - i - 1)) + j]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reduzir (nome : str, arq : str) -> None:\n",
+    "    aux = np.loadtxt (arq, delimiter = ';', dtype = str)\n",
+    "    aux = np.delete (aux, 0, 0) #Removendo a linha dos nomes das colunas\n",
+    "    lista_y = []\n",
+    "    lista_intensidade = []\n",
+    "    lista_simetria_vertical = []\n",
+    "    lista_simetria_horizontal = []\n",
+    "    lista_simetria = []\n",
     "\n",
-    "    Retorno: lista_intensidades (lista) - um uma lista com os valores de intensidade.  \n",
-    "    '''\n",
-    "    lista_intensidades = []\n",
-    "    aux = open (arq, 'r')\n",
-    "\n",
-    "    valor = ''\n",
-    "    for linha in aux:\n",
+    "    for i in range (len(aux)): #Salvando as labels\n",
+    "        lista_y.append (int(aux[i][0]))\n",
+    "    \n",
+    "    aux = np.delete (aux, 0, 1) #Removendo as labels\n",
+    "    \n",
+    "    for i in range (len(aux)): #Calculando as intensidades\n",
     "        soma = 0\n",
     "\n",
-    "        for i in range (2, len(linha)): #Pulando o label\n",
-    "            if (linha[i] != ';'):\n",
-    "                valor += linha[i]\n",
-    "            \n",
-    "            else:\n",
-    "                soma += int(valor)\n",
-    "                valor = ''\n",
+    "        for j in range (len(aux[0])):\n",
+    "            soma += int(aux[i][j])\n",
     "        \n",
-    "        lista_intensidades.append((soma + int(valor))/255)\n",
-    "        valor = ''\n",
+    "        lista_intensidade.append(soma/P_MAX)\n",
     "    \n",
-    "    aux.close()\n",
+    "    for imagem in aux: #Simetria vertical\n",
+    "        soma = 0\n",
     "\n",
-    "    return lista_intensidades"
+    "        for i in range(N):\n",
+    "            for j in range(int(N/2)):\n",
+    "                soma += abs(int(imagem[(N*i) + j]) - int(imagem[(N*i) + (N - j - 1)]))\n",
+    "\n",
+    "        lista_simetria_vertical.append(soma/P_MAX)\n",
+    "\n",
+    "    for imagem in aux: #Simetria horizontal\n",
+    "        soma = 0\n",
+    "\n",
+    "        for i in range(int(N/2)):\n",
+    "            for j in range(N):\n",
+    "                soma += abs(int(imagem[(N*i) + j]) - int(imagem[N * (N - i - 1) + j]))\n",
+    "\n",
+    "        lista_simetria_horizontal.append(soma/P_MAX)\n",
+    "    \n",
+    "    for i in range (len(aux)): #Somando as simetrias\n",
+    "        lista_simetria.append(lista_simetria_vertical[i] + lista_simetria_horizontal[i])\n",
+    "\n",
+    "    #Criando e preenchendo o novo .csv\n",
+    "    dados_redux = open (f'{nome}.csv', 'w')\n",
+    "\n",
+    "    dados_redux.write ('label;intensidade;simetria\\n')\n",
+    "    for i in range (len(aux)):\n",
+    "        dados_redux.write (f'{lista_y[i]};{lista_intensidade[i]};{lista_simetria[i]}\\n')\n",
+    "    \n",
+    "    dados_redux.close()\n",
+    "\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simetria (arq : str) -> list:\n",
-    "    '''\n",
-    "    Função que calcula a simetria dos pixels de cada dado do dataset a partir de uma equação.\n",
-    "    \n",
-    "    Parâmetros: arq (string) -  nome do .csv que recebe os valores dos pixels das imagens;\n",
-    "\n",
-    "    Retorno: lista_intensidades (lista) - um uma lista com os valores de simetria.  \n",
-    "    '''\n",
-    "    lista_simetrias = []\n",
-    "    s_vertical = []\n",
-    "    s_horizontal = []\n",
-    "    aux = open (arq, 'r')\n",
-    "\n",
-    "    #Simetria vertical:\n",
-    "    for linha in aux:\n",
-    "        for i in range (2, len(linha)): #pula o label\n",
-    "            #soma valor do pixel da primeia coluna com a ultima\n",
-    "            s_vertical.append((int(linha[i]) + int(linha[i-1]))/255)            \n",
-    "\n",
-    "    #Simetria horizontal:\n",
-    "    for coluna in aux:\n",
-    "        for i in range (2, len(coluna)): #pula o label\n",
-    "            #soma valor do pixel da primeira linha com a ultima\n",
-    "            s_horizontal.append((int(coluna[i]) + int(coluna[i-28]))/255)\n",
-    "\n",
-    "    #Valor de simetria completa\n",
-    "    lista_simetrias = s_vertical + s_horizontal\n",
-    "\n",
-    "    aux.close()\n",
-    "\n",
-    "    return lista_simetrias"
+    "reduzir(nome = 'train_redu', arq = 'train.csv')\n",
+    "reduzir(nome = 'test_redu', arq = 'test.csv')"
    ]
   },
   {
@@ -148,6 +167,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PLA ():\n",
+    "    def __init__(self, arq : str, w_lista = []) -> None:\n",
+    "        '''\n",
+    "        Entradas : arq - .csv dos dados, contendo suas características e rotulação. \n",
+    "        '''\n",
+    "        self.xy_lista = []\n",
+    "        self.w_lista = w_lista\n",
+    "\n",
+    "        aux = np.loadtxt (arq, delimiter = ';', dtype = str)\n",
+    "        aux = np.delete (aux, 0, 0) #Removendo a linha dos nomes das colunas\n",
+    "\n",
+    "        for linha in aux:\n",
+    "            self.xy_lista.append([[1, linha[1], linha[2]], linha[0]]) #O 1 será usado para a multiplicação com o bias posteriormente\n",
+    "        \n",
+    "        if (len(w_lista) == 0):\n",
+    "            for i in range (3): #Já que temos 2 features + o bias\n",
+    "                self.w_lista.append(0) #Os pesos inicializarão em 0, caso não existam\n",
+    "\n",
+    "    def Acuracia (self, w_lista : list) -> float:\n",
+    "        soma_PCC = 0\n",
+    "\n",
+    "        for i in range (len(self.xy_lista)):\n",
+    "            aux = np.sign (np.sum(np.multiply(w_lista, self.xy_lista[i][0])))\n",
+    "\n",
+    "            if (aux == self.xy_lista[i][1]):\n",
+    "                soma_PCC += 1\n",
+    "    \n",
+    "        return (soma_PCC/len(self.xy_lista))\n",
+    "\n",
+    "    def ConstrutorLista_PCI (self, pontos : list) -> list:\n",
+    "        lista_PCI = []\n",
+    "\n",
+    "        for i in range (len(pontos)):\n",
+    "            aux = np.sign (np.sum(np.multiply(self.w_lista, pontos[i][0])))\n",
+    "\n",
+    "            if (aux != pontos[i][1]):\n",
+    "                lista_PCI.append(pontos[i])\n",
+    "        \n",
+    "        return lista_PCI\n",
+    "\n",
+    "    def ExecutarPLA (self, n_int = 100) -> None:\n",
+    "        lista_PCI = self.xy_lista\n",
+    "        w_otimo = self.w_lista\n",
+    "\n",
+    "        i = 0\n",
+    "        while (len(lista_PCI) > 0 or i < n_int):\n",
+    "            ale_index = np.random.randint(0, len(lista_PCI)) #index aleatório\n",
+    "            ponto = lista_PCI[ale_index]\n",
+    "\n",
+    "            aux = np.multiply(ponto[0], ponto[1]) #x * y\n",
+    "            w_novo = np.add(self.w_lista, aux)\n",
+    "\n",
+    "            if (self.Acuracia(w_lista = w_otimo) < self.Acuracia(w_lista = w_novo)):\n",
+    "                w_otimo = w_novo\n",
+    "\n",
+    "            self.w_lista = w_novo\n",
+    "\n",
+    "            lista_PCI = self.ConstrutorLista_PCI (self, pontos = self.xy_lista)\n",
+    "            i += 1\n",
+    "        \n",
+    "        self.w_lista = w_otimo\n",
+    "\n",
+    "        return\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -159,6 +249,17 @@
    "metadata": {},
    "source": [
     "### Regressão Logística"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Reg_Log ():\n",
+    "    def __init__ (self) -> None:\n",
+    "        pass"
    ]
   },
   {
