Update do Mini_Projeto
Adicionei a regressão logística e o PLA (mas ainda não os testei).

--- a/Mini_Projeto.ipynb
+++ b/Mini_Projeto.ipynb
@@ -19,16 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random as rd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,25 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nAqui é só um exemplo menor de como funcionam as fórmulas da simetria no array.\\nAcho bom usar pra estudar pra apresentação, então deixei aqui.\\n'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''\n",
-    "Aqui é só um exemplo menor de como funcionam as fórmulas da simetria no array.\n",
-    "Acho bom usar pra estudar pra apresentação, então deixei aqui.\n",
-    "'''\n",
+    "# Aqui é só um exemplo menor de como funcionam as fórmulas da simetria no array.\n",
+    "# Acho bom usar pra estudar pra apresentação, então deixei aqui.\n",
     "\n",
     "# teste = [\n",
     "# 1, 2, 3, 4,\n",
@@ -83,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def leitor_csv (arq : str) -> np.array:\n",
+    "    x = []\n",
+    "    y = []\n",
+    "\n",
+    "    aux = np.loadtxt (arq, delimiter = ';', dtype = str)\n",
+    "    aux = np.delete (aux, 0, 0) #Removendo a linha dos nomes das colunas\n",
+    "\n",
+    "    for linha in aux:\n",
+    "        x.append([linha[1], linha[2]])\n",
+    "        y.append(linha[0])\n",
+    "    \n",
+    "    return np.array(x), np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,73 +176,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PLA ():\n",
-    "    def __init__(self, arq : str, w_lista = []) -> None:\n",
-    "        '''\n",
-    "        Entradas : arq - .csv dos dados, contendo suas características e rotulação. \n",
-    "        '''\n",
-    "        self.xy_lista = []\n",
-    "        self.w_lista = w_lista\n",
+    "    def __init__(self, n_int : int = 1000, tam_batch : int = 32) -> None:\n",
+    "        self.n_int = n_int\n",
+    "        self.tam_batch = tam_batch\n",
     "\n",
-    "        aux = np.loadtxt (arq, delimiter = ';', dtype = str)\n",
-    "        aux = np.delete (aux, 0, 0) #Removendo a linha dos nomes das colunas\n",
-    "\n",
-    "        for linha in aux:\n",
-    "            self.xy_lista.append([[1, linha[1], linha[2]], linha[0]]) #O 1 será usado para a multiplicação com o bias posteriormente\n",
-    "        \n",
-    "        if (len(w_lista) == 0):\n",
-    "            for i in range (3): #Já que temos 2 features + o bias\n",
-    "                self.w_lista.append(0) #Os pesos inicializarão em 0, caso não existam\n",
-    "\n",
-    "    def Acuracia (self, w_lista : list) -> float:\n",
+    "    def acuracia (self, X : np.array, Y : np.array, w_lista : np.array) -> float:\n",
     "        soma_PCC = 0\n",
     "\n",
-    "        for i in range (len(self.xy_lista)):\n",
-    "            aux = np.sign (np.sum(np.multiply(w_lista, self.xy_lista[i][0])))\n",
+    "        for i in range (len(X)):\n",
+    "            aux = np.sign (np.sum(np.matmul(w_lista, X[i])))\n",
     "\n",
-    "            if (aux == self.xy_lista[i][1]):\n",
+    "            if (aux == Y[i]):\n",
     "                soma_PCC += 1\n",
     "    \n",
-    "        return (soma_PCC/len(self.xy_lista))\n",
+    "        return (soma_PCC/len(X))\n",
+    "    \n",
+    "    def __construtor_PCI (self, X : np.array, Y : np.array) -> np.array:\n",
+    "        lista_PCI_x = []\n",
+    "        lista_PCI_y = []\n",
     "\n",
-    "    def ConstrutorLista_PCI (self, pontos : list) -> list:\n",
-    "        lista_PCI = []\n",
+    "        for i in range (len(X)):\n",
+    "            aux = np.sign (np.sum(np.matmul(self.w_lista, X[i])))\n",
     "\n",
-    "        for i in range (len(pontos)):\n",
-    "            aux = np.sign (np.sum(np.multiply(self.w_lista, pontos[i][0])))\n",
-    "\n",
-    "            if (aux != pontos[i][1]):\n",
-    "                lista_PCI.append(pontos[i])\n",
+    "            if (aux != Y[i]):\n",
+    "                lista_PCI_x.append(X[i])\n",
+    "                lista_PCI_y.append(Y[i])\n",
     "        \n",
-    "        return lista_PCI\n",
+    "        return np.array(lista_PCI_x), np.array(lista_PCI_y) \n",
     "\n",
-    "    def ExecutarPLA (self, n_int = 100) -> None:\n",
-    "        lista_PCI = self.xy_lista\n",
-    "        w_otimo = self.w_lista\n",
+    "    def fit (self, X : np.array, Y : np.array) -> None:\n",
+    "        lista_PCI_x = X\n",
+    "        lista_PCI_y = Y\n",
+    "        self.w_lista, w_otimo = np.zeros(X.shape[1]), np.zeros(X.shape[1])\n",
     "\n",
     "        i = 0\n",
-    "        while (len(lista_PCI) > 0 or i < n_int):\n",
-    "            ale_index = np.random.randint(0, len(lista_PCI)) #index aleatório\n",
-    "            ponto = lista_PCI[ale_index]\n",
+    "        while (len(lista_PCI_x) > 0 or i < self.n_int):\n",
+    "            ale_index = np.random.randint(0, len(lista_PCI_x)) #index aleatório\n",
+    "            ponto_x = lista_PCI_x[ale_index]\n",
+    "            ponto_y = lista_PCI_y[ale_index]\n",
     "\n",
-    "            aux = np.multiply(ponto[0], ponto[1]) #x * y\n",
+    "            aux = np.matmul(ponto_x, ponto_y) #x * y\n",
     "            w_novo = np.add(self.w_lista, aux)\n",
     "\n",
-    "            if (self.Acuracia(w_lista = w_otimo) < self.Acuracia(w_lista = w_novo)):\n",
+    "            if (self.acuracia (X, Y, w_otimo) < self.acuracia (X, Y, w_novo)):\n",
     "                w_otimo = w_novo\n",
     "\n",
     "            self.w_lista = w_novo\n",
     "\n",
-    "            lista_PCI = self.ConstrutorLista_PCI (self, pontos = self.xy_lista)\n",
+    "            lista_PCI_x, lista_PCI_y = self.__construtor_PCI (self, X = X, Y = Y)\n",
     "            i += 1\n",
     "        \n",
     "        self.w_lista = w_otimo\n",
     "\n",
-    "        return\n"
+    "        return\n",
+    "    \n",
+    "    def predict (self, X : np.array) -> np.array:\n",
+    "        predict_y = [np.sign(np.matmul(i, self.w_lista)) for i in X]\n",
+    "\n",
+    "        return predict_y\n",
+    "\n",
+    "    def get_w (self) -> np.array:\n",
+    "        try:\n",
+    "            return self.w_lista\n",
+    "        \n",
+    "        except:\n",
+    "            print (\"Não foi possível recuperar w. Por favor, se certifique de treinar o modelo antes.\\n\")\n",
+    "\n",
+    "    def set_w (self, novo_w : np.array) -> None:\n",
+    "        self.w_lista = novo_w\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -253,13 +269,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Reg_Log ():\n",
-    "    def __init__ (self) -> None:\n",
-    "        pass"
+    "    def __init__ (self, eta = 0.1, n_int = 1000, tam_batch = 32) -> None:\n",
+    "        self.eta = eta\n",
+    "        self.n_int = n_int\n",
+    "        self.tam_batch = tam_batch\n",
+    "    \n",
+    "    def fit (self, X : np.array, Y : np.array, eps : float = 0.0001) -> None:\n",
+    "        lista_X = X\n",
+    "        lista_y = Y\n",
+    "    \n",
+    "        for i in range (len(X)):\n",
+    "            lista_X[i].insert(0, 1) #O 1 será usado para a multiplicação com o bias posteriormente\n",
+    "        \n",
+    "        n_dim = len(lista_X[0])\n",
+    "        n_elem = len(lista_X)\n",
+    "        w_lista = np.zeros(n_dim, dtype = float)\n",
+    "\n",
+    "        #Cálculo dos gradientes pelo processo iterativo\n",
+    "        for i in range (self.n_int):\n",
+    "            vsoma = np.zeros(n_dim, dtype = float)\n",
+    "\n",
+    "            if (self.tam_batch) < n_elem:\n",
+    "                batch_X = []\n",
+    "                batch_Y = []\n",
+    "                indices = rd.sample(range(n_elem), self.tam_batch)\n",
+    "\n",
+    "                for j in indices:\n",
+    "                    batch_X.append(lista_X[j])\n",
+    "                    batch_Y.append(lista_y[j])\n",
+    "            \n",
+    "            else:\n",
+    "                batch_X = lista_X\n",
+    "                batch_Y = lista_y\n",
+    "            \n",
+    "            for xn, yn in zip(batch_X, batch_Y):\n",
+    "                vsoma += (int(yn) * float(xn)) / 1 + np.exp(np.matmul(np.transpose(yn * w_lista), xn))\n",
+    "            \n",
+    "            grad_t = vsoma / self.tam_batch\n",
+    "\n",
+    "            #Testando o minimo\n",
+    "            if (np.linalg.norm(grad_t) <  eps):\n",
+    "                break\n",
+    "\n",
+    "            w_lista = w_lista + (self.eta * grad_t)\n",
+    "        \n",
+    "        self.w_lista = w_lista\n",
+    "\n",
+    "    def predict (self, X : np.array) -> np.array:\n",
+    "        aux = [1 / (1 + np.exp(- np.dot(self.w_lista, i))) for i in X]\n",
+    "        predict_y = [0 if i <= 0.5 else 1 for i in aux]\n",
+    "\n",
+    "        return predict_y\n",
+    "\n",
+    "    def get_w (self) -> np.array:\n",
+    "        try:\n",
+    "            return self.w_lista\n",
+    "        \n",
+    "        except:\n",
+    "            print (\"Não foi possível recuperar w. Por favor, se certifique de treinar o modelo antes.\\n\")\n",
+    "\n",
+    "    def set_w (self, novo_w : np.array) -> None:\n",
+    "        self.w_lista = novo_w\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -302,6 +379,20 @@
    "metadata": {},
    "source": [
     "## Classificação de Dígitos Completo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UmVSTodos ():\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
+    "        \n",
+    "    def fit (self):\n",
+    "        pass"
    ]
   },
   {
