--- a/Mini_Projeto.ipynb
+++ b/Mini_Projeto.ipynb
@@ -23,8 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib as plt\n",
     "import numpy as np\n",
-    "import random as rd"
+    "import pandas as pd\n",
+    "import random as rd\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +148,8 @@
     "    aux = np.delete (aux, 0, 0) #Removendo a linha dos nomes das colunas\n",
     "\n",
     "    for linha in aux:\n",
-    "        x.append([linha[1], linha[2]])\n",
-    "        y.append(linha[0])\n",
+    "        x.append([float(linha[1]), float(linha[2])])\n",
+    "        y.append(int(linha[0]))\n",
     "    \n",
     "    return np.array(x), np.array(y)"
    ]
@@ -168,6 +172,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mod_labels (X : np.array, Y : np.array, labels : list) -> np.array:\n",
+    "    if (len(labels) != 2):\n",
+    "        print(\"Selecione as duas labels que deverão ser classificadas.\")\n",
+    "\n",
+    "        return None\n",
+    "\n",
+    "    novo_X = []\n",
+    "    novo_Y = []\n",
+    "\n",
+    "    for i in range (len(Y)):\n",
+    "        if (Y[i] == labels[0]):\n",
+    "            novo_X.append(X[i])\n",
+    "            novo_Y.append(1)\n",
+    "        \n",
+    "        elif (Y[i] == labels[1]):\n",
+    "            novo_X.append(X[i])\n",
+    "            novo_Y.append(-1)\n",
+    "    \n",
+    "    return np.array(novo_X), np.array(novo_Y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +243,8 @@
     "    def fit (self, X : np.array, Y : np.array) -> None:\n",
     "        lista_PCI_x = X\n",
     "        lista_PCI_y = Y\n",
-    "        self.w_lista, w_otimo = np.zeros(X.shape[1]), np.zeros(X.shape[1])\n",
+    "        self.w_lista = np.zeros(X.shape[1])\n",
+    "        w_otimo = self.w_lista\n",
     "\n",
     "        i = 0\n",
     "        while (len(lista_PCI_x) > 0 or i < self.n_int):\n",
@@ -220,7 +252,10 @@
     "            ponto_x = lista_PCI_x[ale_index]\n",
     "            ponto_y = lista_PCI_y[ale_index]\n",
     "\n",
-    "            aux = np.matmul(ponto_x, ponto_y) #x * y\n",
+    "            # print(ponto_x)\n",
+    "            # print(ponto_y)\n",
+    "            \n",
+    "            aux = ponto_x * ponto_y #x * y\n",
     "            w_novo = np.add(self.w_lista, aux)\n",
     "\n",
     "            if (self.acuracia (X, Y, w_otimo) < self.acuracia (X, Y, w_novo)):\n",
@@ -228,7 +263,7 @@
     "\n",
     "            self.w_lista = w_novo\n",
     "\n",
-    "            lista_PCI_x, lista_PCI_y = self.__construtor_PCI (self, X = X, Y = Y)\n",
+    "            lista_PCI_x, lista_PCI_y = self.__construtor_PCI (X = X, Y = Y)\n",
     "            i += 1\n",
     "        \n",
     "        self.w_lista = w_otimo\n",
@@ -269,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +357,7 @@
     "\n",
     "    def predict (self, X : np.array) -> np.array:\n",
     "        aux = [1 / (1 + np.exp(- np.dot(self.w_lista, i))) for i in X]\n",
-    "        predict_y = [0 if i <= 0.5 else 1 for i in aux]\n",
+    "        predict_y = [-1 if i <= 0.5 else 1 for i in aux]\n",
     "\n",
     "        return predict_y\n",
     "\n",
@@ -383,16 +418,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class UmVSTodos ():\n",
-    "    def __init__(self) -> None:\n",
-    "        pass\n",
+    "    def __init__(self, ordem : list, n_int : int = 1000, modelo = None) -> None:\n",
+    "        self.modelo = modelo(n_int = n_int)\n",
+    "        self.ordem = ordem\n",
     "        \n",
-    "    def fit (self):\n",
-    "        pass"
+    "    def fit (self, X : np.array, Y : np.array) -> None:\n",
+    "        novo_X = X\n",
+    "        novo_Y = Y\n",
+    "        fila = self.ordem\n",
+    "        self.w_lista = []\n",
+    "\n",
+    "        while (len(fila) > 0):\n",
+    "            aux = []\n",
+    "            index_lista = []\n",
+    "\n",
+    "            #Adequando as labels\n",
+    "            for i in range(len(novo_Y)):\n",
+    "                if (novo_Y[i] == fila[0]):\n",
+    "                    aux.append(1)\n",
+    "                    index_lista.append(i)\n",
+    "                \n",
+    "                else:\n",
+    "                    aux.append(-1)\n",
+    "            \n",
+    "            #Treinando os pesos de acordo com o modelo\n",
+    "            novo_Y = aux\n",
+    "            self.modelo.fit(X = novo_X, Y = novo_Y)\n",
+    "            self.w_lista.append(self.modelo.get_w())\n",
+    "\n",
+    "            #Atualizando as listas, removendo as labels já treinadas\n",
+    "            novo_X = np.delete (novo_X, index_lista)\n",
+    "            novo_Y = np.delete (novo_Y, index_lista)\n",
+    "            fila.remove(fila[0])\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "    def predict (self, X : np.array) -> np.array:\n",
+    "        y_predict = [self.__predict_x(x = xi) for xi in X]\n",
+    "\n",
+    "        return y_predict\n",
+    "\n",
+    "    def __predict_x (self, x : np.array) -> int:\n",
+    "        for i in range (len(self.ordem), 0, -1):\n",
+    "            aux = self.modelo\n",
+    "            aux.set_w(novo_w = self.w_lista[-(i - 1)])\n",
+    "\n",
+    "            if (aux.predict(X = x)[0] == 1):\n",
+    "                return self.ordem[-i]\n",
+    "            \n",
+    "        else:\n",
+    "            return self.__predict_x (x = x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 52.41568627,  78.00784314],\n",
+       "       [103.3372549 , 136.48627451],\n",
+       "       [129.92156863, 145.96862745],\n",
+       "       ...,\n",
+       "       [100.25098039, 113.94509804],\n",
+       "       [108.29019608, 111.81960784],\n",
+       "       [ 92.83921569, 137.30196078]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y = leitor_csv(arq = \"train_redu.csv\")\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size = 0.2)\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m X_train, y_train \u001b[38;5;241m=\u001b[39m mod_labels (X \u001b[38;5;241m=\u001b[39m X_train, Y \u001b[38;5;241m=\u001b[39m y_train, labels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m      2\u001b[0m PLA_teste \u001b[38;5;241m=\u001b[39m PLA()\n\u001b[0;32m----> 3\u001b[0m \u001b[43mPLA_teste\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m w \u001b[38;5;241m=\u001b[39m PLA_teste\u001b[38;5;241m.\u001b[39mget_w()\n\u001b[1;32m      5\u001b[0m w\n",
+      "Cell \u001b[0;32mIn[13], line 48\u001b[0m, in \u001b[0;36mPLA.fit\u001b[0;34m(self, X, Y)\u001b[0m\n\u001b[1;32m     45\u001b[0m aux \u001b[38;5;241m=\u001b[39m ponto_x \u001b[38;5;241m*\u001b[39m ponto_y \u001b[38;5;66;03m#x * y\u001b[39;00m\n\u001b[1;32m     46\u001b[0m w_novo \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39madd(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mw_lista, aux)\n\u001b[0;32m---> 48\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39macuracia (X, Y, w_otimo) \u001b[38;5;241m<\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macuracia\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw_novo\u001b[49m\u001b[43m)\u001b[49m):\n\u001b[1;32m     49\u001b[0m     w_otimo \u001b[38;5;241m=\u001b[39m w_novo\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mw_lista \u001b[38;5;241m=\u001b[39m w_novo\n",
+      "Cell \u001b[0;32mIn[13], line 12\u001b[0m, in \u001b[0;36mPLA.acuracia\u001b[0;34m(self, X, Y, w_lista)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (\u001b[38;5;28mlen\u001b[39m(X)):\n\u001b[1;32m     10\u001b[0m     aux \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msign (np\u001b[38;5;241m.\u001b[39msum(np\u001b[38;5;241m.\u001b[39mmatmul(w_lista, X[i])))\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (aux \u001b[38;5;241m==\u001b[39m Y[i]):\n\u001b[1;32m     13\u001b[0m         soma_PCC \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (soma_PCC\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(X))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "X_train, y_train = mod_labels (X = X_train, Y = y_train, labels = [1, 5])\n",
+    "PLA_teste = PLA()\n",
+    "PLA_teste.fit(X = X_train, Y = y_train)\n",
+    "w = PLA_teste.get_w()\n",
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "f(x) = \n",
+    "\n",
+    "'''\n",
+    "\n",
+    "line = np.linspace(-1, 1, 1000) \n",
+    "plt.plot(line, m*line + b, label=\"f(x)\", c=\"green\")\n",
+    "plt.show()\n",
+    "\n",
+    "# digitos = pd.read_csv(\"test_redu.csv\", sep = \";\")\n",
+    "# sns.set_theme()\n",
+    "# sns.jointplot(data=digitos, x=\"intensidade\", y=\"simetria\", hue=\"label\", palette=\"Set2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def UmVTodos_plot ():\n",
+    "    return"
    ]
   },
   {
